# anne

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/anne/: __init__.py
src/anne/cli/: app.py  books.py  bootstrap.py  db_cmd.py  doctor.py  ideas.py  review.py  sources.py
src/anne/config/: settings.py
src/anne/db/: connection.py  migrate.py  schema.sql
src/anne/models/: __init__.py
src/anne/services/: books.py  filesystem.py  ideas.py  llm.py  parsers.py  pipeline.py  sources.py
src/anne/tui/: __init__.py  app.tcss
src/anne/tui/modals/: about.py  action_menu.py  add_idea.py  confirm.py  copy_field.py  custom_prompt.py  edit_field.py  filter.py  loading.py  prompt_response.py  tag_filter.py
src/anne/tui/screens/: dashboard.py  workspace.py
src/anne/tui/widgets/: action_panel.py  idea_detail.py  idea_list.py  status_bar.py
src/anne/utils/: exceptions.py  icloud.py
tests/: conftest.py
tests/test_cli/: test_books.py  test_bootstrap.py  test_db_cmd.py  test_ideas.py  test_ideas_browse.py  test_sources.py
tests/test_db/: test_connection.py  test_migrate.py
tests/test_models/: test_models.py
tests/test_services/: test_books.py  test_ideas.py  test_ideas_queries.py  test_llm.py  test_parsers.py  test_pipeline.py  test_sources.py
tests/test_tui/: conftest.py  test_action_modal.py  test_dashboard.py  test_prompt_modals.py  test_workspace.py
tests/test_utils/: test_icloud.py
