[project]
name = "anne"
version = "0.1.0"
description = "Pipeline CLI for converting reading notes into short posts for social networks."
readme = "README.md"
license = "MIT"
authors = [{name = "Marcell G. C. da Silva"}]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=8.0",
]

[project.scripts]
anne = "anne.cli.app:app"

[project.urls]
Repository = "https://github.com/mazuh/anne"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
